[gd_scene load_steps=5 format=3 uid="uid://dehikb65o1cb2"]

[ext_resource type="Script" uid="uid://da1t82uebiqkk" path="res://components/背包组件/背包格子.gd" id="1_mhba0"]
[ext_resource type="PackedScene" uid="uid://bj6bbpnuwn81w" path="res://components/成长属性组件/LabelAndValue.tscn" id="2_2ry35"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhba0"]
resource_local_to_scene = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ry35"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.422371, 0.422371, 0.422371, 1)

[node name="背包格子" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(50, 50)
offset_right = 50.0
offset_bottom = 50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mhba0")
script = ExtResource("1_mhba0")

[node name="Node" type="Node" parent="."]

[node name="Tips" type="PanelContainer" parent="Node"]
unique_name_in_owner = true
visible = false
offset_left = 52.0
offset_right = 73.0
offset_bottom = 54.0
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2ry35")

[node name="DefaultTip" type="Label" parent="Node/Tips"]
layout_mode = 2

[node name="ShieldItem" type="VBoxContainer" parent="Node/Tips"]
visible = false
layout_mode = 2

[node name="名称" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
layout_mode = 2
label = "名称："

[node name="稀有度" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "稀有度："

[node name="等级" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "等级："

[node name="flat_attack" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "攻击力："

[node name="percent_attack" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "攻击力加成："

[node name="flat_defense" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "防御力："

[node name="percent_defense" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "防御力加成："

[node name="flat_agility" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "敏捷："

[node name="percent_agility" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "敏捷加成："

[node name="flat_health" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "生命值："

[node name="percent_health" parent="Node/Tips/ShieldItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "生命值加成："

[node name="WeaponItem" type="VBoxContainer" parent="Node/Tips"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="名称" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
layout_mode = 2
label = "名称："

[node name="稀有度" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
layout_mode = 2
label = "稀有度："

[node name="等级" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
layout_mode = 2
label = "等级："

[node name="flat_attack" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "攻击力："

[node name="percent_attack" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "攻击力加成："

[node name="flat_defense" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "防御力："

[node name="percent_defense" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "防御力加成："

[node name="flat_agility" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "敏捷："

[node name="percent_agility" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "敏捷加成："

[node name="flat_health" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "生命值："

[node name="percent_health" parent="Node/Tips/WeaponItem" instance=ExtResource("2_2ry35")]
visible = false
layout_mode = 2
label = "生命值加成："

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 13.0
offset_right = 50.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
